tinyc/test/good/init-array-designated-partial-1.c
int main()
{
    int x[ 2 ] = { [ 0 ] = 1, };

    assert( x[ 0 ] == 1 );
    assert( x[ 1 ] == 0 );

    return 0;
}
