tinyc/test/bad/struct-array-of-self.c
struct s
{
    struct s x[ 2 ];
};

int main()
{
    return 0;
}

